argocd/extra/route-http-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-argocd
  namespace: argocd
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 80
